fixed overflow bug in user dashboard

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -1,6 +1,6 @@
 .c-btn{
     background-color: transparent;
     border: none;
-    visibility: hi;
+    visibility: hidden;
 }
 
